@@ -48,8 +48,7 @@
 <table cols="2" width="100%">
 <tr>
 <td align="center" width="50%"><a href="packages.html">Packages</a></td>
-<td align="center" width="50%"><a href="search/SearchEngine.html">Search Engine
-&amp; Keywords</a></td>
+<td align="center" width="50%"><a href="Search.html">Search Engine &amp; Keywords</a></td>
 </tr>
 </table>
 
