@@ -84,17 +84,10 @@ page titles.
 <br>
 
 <p> For search to work, you need Java installed and both Java and
-JavaScript enabled in your browser.<br> On the Mozilla/Netscape family
+JavaScript enabled in your browser.<br> On the Mozilla/Firefox family
 of browsers you should see `Applet SearchEngine started' at the left
-edge of the status bar.  For help consult the
-<a href="../../manual/R-admin.html#Enabling-search-in-HTML-help">R Installation and Administration</a> manual.
+edge of the status bar.
 </p>
-
-<p> On some Mozilla-based browsers the links on the results page will
-become inactive if you return to it: to work around this you can open
-a link in a new tab or window.
-</p>
-
 
 <p> Even if this search does not work on your system, you can always use
 <samp>help.search</samp> at the R prompt.
